# Bazel-Rust-Testing

./: WORKSPACE  rust-project.json
src/rust/: BUILD.bazel
src/rust/example_eitt/: BUILD.bazel  Cargo.toml  lib.rs  main.rs  slib.rs
src/rust/example_tveir/: BUILD.bazel  lib.rs  tst.rs
